/**
 * The order service is responsible for managing the orders placed by or for patients.
 */
syntax = "proto3";
option java_multiple_files = true;
package cdx.opencdx.grpc.shipping;
import "common.proto";
import "google/protobuf/timestamp.proto";

/**
  * The Order message captures the details of a single order placed by a patient.
 */
message Order {
  /**
   * The unique identifier for the order.
   */
  optional string id = 1;

  /**
   * The unique identifier for the patient who placed the order or for whom the order was placed.
   */
  optional string patient_id = 2;

  /**
   * The shipping name for the order.
   */
  cdx.opencdx.grpc.common.FullName shipping_name = 3;

  /**
   * The shipping address for the order.
   */
  cdx.opencdx.grpc.common.Address shipping_address = 4;

  /**
   * The id of TestCase that are part of the order.
   */
  string test_case_id = 5;

  /*
   * The timestamp capturing when this particular Manufacturer instance was created.
   * This is optional, and might not be present at all.
   */
  optional google.protobuf.Timestamp created = 6;

  /*
   * The timestamp capturing any modifications to the Manufacturer instance.
   * Similar to 'created', this too is optional.
   */
  optional google.protobuf.Timestamp modified = 7;

  /*
   * The ID of the user who initially created this Manufacturer instance.
   * Another optional field.
   */
  optional string creator = 8;

  /*
   * The ID of the user who made the most recent modifications to this Manufacturer instance.
   * This field is also optional.
   */
  optional string modifier = 9;

  /**
   * The status of the order.
   */
  optional cdx.opencdx.grpc.common.ShippingStatus status = 10;
}

/**
 * The CreateOrderRequest message captures the details of a request to create a new order.
 */
message CreateOrderRequest {
  /**
   * The order to be created.
   */
  Order order = 1;
}

/**
 * The CreateOrderResponse message captures the details of the response to a request to create a new order.
 */
message CreateOrderResponse {
  /**
   * The order that was created.
   */
  Order order = 1;
}

/**
 * The GetOrderRequest message captures the details of a request to retrieve an existing order.
 */
message GetOrderRequest {
  /**
   * The unique identifier for the order to be retrieved.
   */
  string id = 1;
}
/**
 * The GetOrderResponse message captures the details of the response to a request to retrieve an existing order.
 */
message GetOrderResponse {
  /**
   * The order that was retrieved.
   */
  Order order = 1;
}
/**
 * The UpdateOrderRequest message captures the details of a request to update an existing order.
 */
message UpdateOrderRequest {
  /**
   * The order to be updated.
   */
  Order order = 1;
}
/**
 * The UpdateOrderResponse message captures the details of the response to a request to update an existing order.
 */
message UpdateOrderResponse {
  /**
   * The order that was updated.
   */
  Order order = 1;
}

/**
 * The CancelOrderRequest message captures the details of a request to cancel an existing order.
 */
message CancelOrderRequest {
  /**
   * The unique identifier for the order to be cancelled.
   */
  string id = 1;
}

/**
 * The CancelOrderResponse message captures the details of the response to a request to cancel an existing order.
 */
message CancelOrderResponse {
  /**
   * The order that was cancelled.
   */
  Order order = 1;
}
/**
 * The ListOrdersRequest message captures the details of a request to retrieve a list of orders.
 */
message ListOrdersRequest {
  /**
   * The pagination details for the list of orders.
   */
  cdx.opencdx.grpc.common.Pagination pagination = 1;
  /**
   * The unique identifier for the patient whose orders are to be retrieved.
   */
  optional string patient_id = 2;
}
/**
 * The ListOrdersResponse message captures the details of the response to a request to retrieve a list of orders.
 */
message ListOrdersResponse {

  /**
   * The list of orders that were retrieved.
   */
  repeated Order orders = 1;

  /**
   * The pagination details for the list of orders.
   */
  cdx.opencdx.grpc.common.Pagination pagination = 2;
}

/**
 * The OrderService service is responsible for managing the orders placed by or for patients.
 */
service OrderService {
  /**
   * Create a new order.
   */
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  /**
   * Retrieve an existing order.
   */
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
  /**
   * Update an existing order.
   */
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {}
  /**
   * Cancel an existing order.
   */
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse) {}
  /**
   * Retrieve a list of orders.
   */
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
}